# media_service

./: alembic.ini  pyproject.toml  settings.yml
src/application/: app.py  container.py
src/domain/file/: registry.py  schema.py
src/infrastructure/database/migrations/versions/: 2024_09_29-ca3454216f5e_create_model.py
src/infrastructure/database/models/: __init__.py  file.py
src/infrastructure/exceptions/: minio_exceptions.py
src/infrastructure/file_manager/: minio_client.py
src/infrastructure/handlers/: asyncio_handler.py
src/presentation/: file.py
src/service/: file.py
